[project]
name = "eld-trip-planner-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6.0",
    "django-cors-headers>=4.4",
    "django-environ>=0.11",
    "django-filter>=24.3",
    "djangorestframework>=3.15",
    "gunicorn>=23.0",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "pyjwt[crypto]>=2.9",
    "whitenoise>=6.7",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=5.0",
    "djangorestframework-stubs[compatible-mypy]>=3.15",
    "factory-boy>=3.3",
    "ipython>=8",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-django>=4.9",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]

